# llamaneuro

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.py
TransformerX/: .coverage  .dockerignore  Dockerfile  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.jupyter  GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  run.sh  setup.py  setup.sh  start.sh  start_server.sh  test_api.sh  tox.ini  verify.sh
TransformerX/.github/workflows/: ci.yml  docker.yml
TransformerX/dashboard/: README.md  index.html  styles.css
TransformerX/dashboard/js/: bci-status.js  dashboard.js  decoder-visualization.js  metrics-visualization.js  network-visualization.js  neural-signal-processor.js  neuro-llama.js  vendor.js
TransformerX/docs/: ARCHITECTURE.md  DOCKER.md
TransformerX/scripts/: build_all_docker.sh  build_docker.sh  config.template.js  dev_setup.sh  docker-entrypoint.sh  docker_run.sh  download_models.py  find_port.sh  nginx.conf  test_docker.sh
TransformerX/server/: README.md  __init__.py  app.py  requirements-dev.txt  requirements.txt  run_server.py  test_server.py
TransformerX/server/api/: __init__.py  routes.py
TransformerX/server/config/: default.json
TransformerX/server/llama_interface/: __init__.py  llama_model.py
TransformerX/server/neuro_processor/: __init__.py  classification.py  feature_extraction.py  processor.py  transformers.py
TransformerX/server/utils/: __init__.py  config.py
TransformerX/transformerx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api.md  index.html  installation.md  usage.md
docs/api/: index.html
examples/: advanced_usage.py  basic_usage.py
llamaneuro/: __init__.py  client.py  main.py  utils.py
src/llamaneuro/: __init__.py
tests/: test_client.py  test_main.py
