[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformerx"
version = "1.0.0"
description = "TransformerX: Neural Signal Processing with LLaMA Integration"
readme = "README.md"
authors = [
    {name = "TransformerX Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "flask>=2.2.3",
    "flask-cors>=3.0.10", 
    "numpy>=1.22.4",
    "scipy>=1.10.1",
    "pandas>=1.5.3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
deep-learning = [
    "torch>=2.0.0",
    "transformers>=4.30.2",
]
eeg = [
    "mne>=1.3.1",
    "pyedflib>=0.1.30",
]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "tox>=4.11.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/transformerx"
"Bug Tracker" = "https://github.com/yourusername/transformerx/issues"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "mne.*"]
ignore_missing_imports = true 